--- a/SosD/SosD.csproj
+++ b/SosD/SosD.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetCore.NPOI" Version="1.2.3" />
     <PackageReference Include="EFCore.BulkExtensions" Version="7.1.6" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="7.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
@@ -25,6 +26,7 @@
   <ItemGroup>
     <Folder Include="Repos\Models\" />
     <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\archivos\" />
   </ItemGroup>
 
 </Project>
